# voice-memo-brain

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: agent.py  google_utils.py  main.py
